--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=OracleProject
+
+# URL de connexion JDBC au conteneur Oracle
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCLCDB
+
+# Identifiants de connexion Oracle
+spring.datasource.username=sys
+spring.datasource.password=0610
+
+# Spécification du driver Oracle
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# Configuration JPA (Hibernate)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
