--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=OracleProject
 
 # URL de connexion JDBC au conteneur Oracle
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCLCDB
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCLCDB
 
 # Identifiants de connexion Oracle
 spring.datasource.username=C##monuser
