--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=OracleProject
 
 # URL de connexion JDBC au conteneur Oracle
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCLCDB
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCLCDB
 
 # Identifiants de connexion Oracle
 spring.datasource.username=C##monuser
 spring.datasource.password=motdepasse
 
-# Spécification du driver Oracle
+# SpÃ©cification du driver Oracle
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # Configuration JPA (Hibernate)
