--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=OracleProject
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCLCDB
 
 # Identifiants de connexion Oracle
-spring.datasource.username=C##monuser
-spring.datasource.password=motdepasse
+spring.datasource.username=sys as sysdba
+spring.datasource.password=0610
 
 # Spécification du driver Oracle
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
