update: fixed users service & creation of user done

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,20 @@
 spring.application.name=OracleProject
 
-# URL de connexion JDBC au conteneur Oracle
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCLCDB
+# URL de connexion JDBC à la pluggable database (PDB)
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/ORCLPDB1
 
-# Identifiants de connexion Oracle
+# Identifiants de connexion Oracle (ajustez si nécessaire)
 spring.datasource.username=sys as sysdba
 spring.datasource.password=0610
 
-# SpÃ©cification du driver Oracle
+# Spécification du driver Oracle
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # Configuration JPA (Hibernate)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+
+# Autres configurations Spring Boot
+security.basic.enabled=false
+management.endpoints.web.exposure.include=*
