--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,20 +1,29 @@
+# General Application Configuration
 spring.application.name=OracleProject
 
-# URL de connexion JDBC à la pluggable database (PDB)
+# JDBC Connection to Oracle Database
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/ORCLPDB1
-
-# Identifiants de connexion Oracle (ajustez si nécessaire)
 spring.datasource.username=sys as sysdba
 spring.datasource.password=0610
-
-# Spécification du driver Oracle
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-# Configuration JPA (Hibernate)
+# JPA and Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 
-# Autres configurations Spring Boot
+# Spring Boot Management and Security
 security.basic.enabled=false
 management.endpoints.web.exposure.include=*
+
+# Encryption Configuration
+oracle.wallet.password=123psw@#ORCLDB
+
+
+# Oracle Wallet and Tablespace Paths
+oracle.wallet.path=/home/med/oracle_wallet
+oracle.tablespace.path=/home/med/oracle_data/tde_tablespace_datafile.dbf
+
+# Oracle Schema and Table Configuration for VPD
+oracle.schema.name=MY_SCHEMA
+oracle.table.name=MY_TABLE
