--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.4.7",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "wowjs": "^1.1.3",
     "zone.js": "~0.15.0"
