--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,12 +23,14 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
+    "ng-particles": "^3.12.0",
     "ng2-charts": "^8.0.0",
     "ngx-pagination": "^6.0.3",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
+    "tsparticles": "^3.7.1",
     "wowjs": "^1.1.3",
     "zone.js": "~0.15.0"
   },
