--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "tsparticles": "^3.7.1",
+    "tsparticles-engine": "^2.12.0",
     "wowjs": "^1.1.3",
     "zone.js": "~0.15.0"
   },
