--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=OracleProject
 # JDBC Connection to Oracle Database
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/ORCLPDB1
 spring.datasource.username=sys as sysdba
-spring.datasource.password=0610
+spring.datasource.password=oracle
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # JPA and Hibernate Configuration
