--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,16 +21,18 @@
     "@angular/platform-browser-dynamic": "^19.0.5",
     "@angular/router": "^19.0.5",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@tsparticles/angular": "^3.0.0",
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/slim": "^3.7.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
-    "ng-particles": "^3.12.0",
     "ng2-charts": "^8.0.0",
     "ngx-pagination": "^6.0.3",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
-    "tsparticles": "^3.7.1",
+    "tsparticles": "^3.0.0",
     "tsparticles-engine": "^2.12.0",
     "wowjs": "^1.1.3",
     "zone.js": "~0.15.0"
