--- a/frontend/public/assets/particlesjs-config2.json
+++ b/frontend/public/assets/particlesjs-config2.json
@@ -1,7 +1,7 @@
 {
   "particles": {
     "number": {
-      "value": 6,
+      "value": 80,
       "density": {
         "enable": true,
         "value_area": 800
@@ -11,13 +11,13 @@
       "value": "#ff0000"
     },
     "shape": {
-      "type": "polygon",
+      "type": "circle",
       "stroke": {
-        "width": 0,
-        "color": "#ffffff"
+        "width": 3,
+        "color": "#ff0000"
       },
       "polygon": {
-        "nb_sides": 6
+        "nb_sides": 5
       },
       "image": {
         "src": "img/github.svg",
@@ -26,8 +26,8 @@
       }
     },
     "opacity": {
-      "value": 0.3,
-      "random": true,
+      "value": 0.5,
+      "random": false,
       "anim": {
         "enable": false,
         "speed": 1,
@@ -36,25 +36,25 @@
       }
     },
     "size": {
-      "value": 160,
-      "random": false,
+      "value": 3,
+      "random": true,
       "anim": {
-        "enable": true,
-        "speed": 10,
-        "size_min": 40,
+        "enable": false,
+        "speed": 40,
+        "size_min": 0.1,
         "sync": false
       }
     },
     "line_linked": {
-      "enable": false,
-      "distance": 200,
-      "color": "#ffffff",
-      "opacity": 1,
-      "width": 2
+      "enable": true,
+      "distance": 150,
+      "color": "#ff0000",
+      "opacity": 0.4,
+      "width": 7.215354273894853
     },
     "move": {
       "enable": true,
-      "speed": 8,
+      "speed": 6,
       "direction": "none",
       "random": false,
       "straight": false,
@@ -71,11 +71,11 @@
     "detect_on": "canvas",
     "events": {
       "onhover": {
-        "enable": false,
-        "mode": "grab"
+        "enable": true,
+        "mode": "repulse"
       },
       "onclick": {
-        "enable": false,
+        "enable": true,
         "mode": "push"
       },
       "resize": true
